--- a/apparmor.config
+++ b/apparmor.config
@@ -1,15 +1,21 @@
 #include <tunables/global>
 
 # The executable of python that will run the app
-/miniconda3/envs/cog_worker/bin/python {
+/miniconda3/bin/python3.6 flags=(attach_disconnected) {
     #include <abstractions/base>
-    #include <abstractions/python>
 
-    /miniconda3/envs/cog_worker/** mr,
+    /var/lib/docker/**/miniconda3/bin/** ix,
+    /var/lib/docker/**/miniconda3/** r,
+    /var/lib/docker/**/miniconda3 r,
+    /miniconda3/bin/** ix,
+    /miniconda3/** mr,
+    /miniconda3 mr,
+    /run_home/** r,
+    /etc/mime.types r,
+    /scratch/** mrw,
+    /var/lib/docker/**/tmp rwm,
+    /var/lib/docker/**/lib/x86_64-linux-gnu/ld-*.so mr,
     # If you have code that the sandbox must be able to access, add lines
     # pointing to those directories:
     # /the/path/to/your/sandbox-packages/** r,
-
-    /tmp/codejail-*/ rix,
-    /tmp/codejail-*/** wrix,
 }
