--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.2'
 
 services:
-
   cog:
     build:
       context: ./
       dockerfile: cog.Dockerfile
     ports:
       - 5000:5000
+    security_opt:
+      - apparmor=/miniconda3/bin/python3.6
